@@ -1,7 +1,11 @@
 /*
- * Automatically generated by make menuconfig: don't edit
+ * Automatically generated C config: don't edit
  */
 #define AUTOCONF_INCLUDED
+
+/*
+ * Just accept the defaults unless you know what you are doing
+ */
 
 /*
  * Advanced - for Developers and Hackers only
@@ -14,14 +18,13 @@
  * Architecture
  */
 #define CONFIG_ARCH_AUTO 1
-#undef  CONFIG_ARCH_PC
+#undef  CONFIG_ARCH_IBMPC
 #undef  CONFIG_ARCH_SIBO
-#define CONFIG_ARCH_PC_AUTO 1
-#undef  CONFIG_ARCH_PC_XT
-#undef  CONFIG_ARCH_PC_AT
-#undef  CONFIG_ARCH_PC_MCA
+#define CONFIG_PC_AUTO 1
+#undef  CONFIG_PC_XT
+#undef  CONFIG_PC_AT
+#undef  CONFIG_PC_MCA
 #undef  CONFIG_ROMCODE
-#define CONFIG_ARCH_PC_CLONE 1
 
 /*
  * 286 Protected Mode Support
@@ -34,6 +37,10 @@
 
 /*
  * Character device drivers
+ */
+
+/*
+ * Select a console driver
  */
 #define CONFIG_CONSOLE_DIRECT 1
 #undef  CONFIG_CONSOLE_BIOS
@@ -50,6 +57,10 @@
 #undef  CONFIG_KEYMAP_FR
 #undef  CONFIG_KEYMAP_SE
 #define CONFIG_DCON_KRAW 1
+
+/*
+ * Other character devices
+ */
 #define CONFIG_CHAR_DEV_RS 1
 #define CONFIG_CHAR_DEV_LP 1
 #define CONFIG_CHAR_DEV_MEM 1
@@ -67,7 +78,15 @@
 #undef  CONFIG_BLK_DEV_XD
 #undef  CONFIG_DMA
 #define CONFIG_GENDISK 1
+
+/*
+ * Additional block devices
+ */
 #undef  CONFIG_BLK_DEV_RAM
+
+/*
+ * Block device options
+ */
 #define CONFIG_BLK_DEV_CHAR 1
 
 /*
@@ -76,9 +95,17 @@
 #define CONFIG_MINIX_FS 1
 #undef  CONFIG_ROMFS_FS
 #undef  CONFIG_ELKSFS_FS
+
+/*
+ * General filesystem settings
+ */
 #undef  CONFIG_FULL_VFS
 #define CONFIG_FS_EXTERNAL_BUFFER 1
 #define CONFIG_PIPE 1
+
+/*
+ * Executable file formats
+ */
 #define CONFIG_EXEC_MINIX 1
 #undef  CONFIG_EXEC_MSDOS
 
@@ -90,6 +117,10 @@
 #define CONFIG_INET 1
 #define CONFIG_INET_STATUS 1
 #undef  CONFIG_UNIX
+
+/*
+ *   Advanced socket options
+ */
 #undef  CONFIG_SOCK_CLIENTONLY
 
 /*
